<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Liste de Courses</string>
    <string name="action_code">Code famille</string>
    <string name="action_liste">Liste de Course</string>
    <string name="action_courses">Faire les Courses</string>
    <string name="lib_btEnregistrer">Enregistrer</string>
    <string name="Magasin">Gestion des rayons</string>
    <string name="laListe">Liste en cours:</string>
    <string name="rayon">Rayon: </string>
    <string name="produit">Produit: </string>
    <string name="quantite">Quantité: </string>
    <string name="ajouter">Ajouter</string>
    <string name="title_activity_activite_faire_courses">ActiviteFaireCourses</string>
    <string name="faire_courses">Faire les courses!</string>
    <string name="caddy">Caddy</string>
    <string name="reporter">Reporter</string>
    <string name="annuler">Annuler</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="nomRayon">Nom du rayon:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_rejoindre_famille">RejoindreFamilleActivity</string>
    <string name="title_activity_creer_famille">CreerFamilleActivity</string>
    <string name="libelle_de_la_famille">Libelle de la famille</string>
    <string name="creer_votre_famille">Créer votre famille</string>
    <string name="rejoindre_une_famille">Rejoindre une famille</string>
    <string name="magasin_header">Magasin :</string>
    <string name="Bienvenue_message">Bienvenue sur votre liste de course</string>
    <string name="identifiant">Identifiant</string>
    <string name="mdp">Mot de passe :</string>
    <string name="verif_mdp">Vérification du mot de passe</string>
    <string name="connecter">Se connecter</string>
    <string name="inscrire">S inscrire</string>
    <string name="inscription">Inscription</string>
    <string name="mail">Adresse mail</string>
    <string name="naissance">Date de naissance</string>
    <string name="jour">Jour</string>
    <string name="jour_hint">JJ</string>
    <string name="mois">Mois</string>
    <string name="mois_hint">MM</string>
    <string name="annee">Annee</string>
    <string name="annee_hint">AAAA</string>
    <string name="saisi_code_famille">Saisissez le code d une famille</string>
    <string name="nomFamille">Nom de la famille</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="infoFamille">Le code d accès de la famille est :</string>

</resources>
