<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bigLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RemplirListe"
    tools:ignore="NestedWeights,Suspicious0dp" >

    <TextView
        android:id="@+id/textViewMagasinId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/laListe" />

    <LinearLayout
        android:id="@+id/lllvp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="18dp"
        android:layout_weight="1"
        android:baselineAligned="false" >

        <ListView
            android:id="@+id/listViewProduits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llhRayon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/libProduitAAcheter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/rayon"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinnerRayon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="25dp"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llhProduit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/produit"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/SpinnerProduit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llhQte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/qteAAcheter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/quantite"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextQuantite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="25dp"
            android:ems="10"
            android:inputType="number" >

            <requestFocus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAjouterALaListe"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ajouter" />
    
    </LinearLayout>
