<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ldcorig.RejoindreFamilleActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textViewMagasinId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:text="@string/saisi_code_famille" />

        <EditText
            android:id="@+id/editTextRejoindreFamilleCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMagasinId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonRejoindreFamilleRejoindre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewMagasinId"
            android:layout_alignRight="@+id/textViewMagasinId"
            android:layout_centerVertical="true"
            android:text="@string/rejoindre_une_famille" />

        <Button
            android:id="@+id/buttonRejoindreFamilleToCreerFamille"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/creer_votre_famille" />

    </RelativeLayout>

</FrameLayout>

